"Too many draw engines enabled at the same time" #65805

Closed
opened 2019-06-14 16:23:03 +02:00 by Germano Cavalcante · 3 comments

System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: AMD Radeon HD 7570M ATI Technologies Inc. 4.5.13399 Core Profile Context 0

Blender Version
Broken: version: 2.80 (sub 74), build in 2019-06-14

Short description of error
In Blender's debug build after enabling certain display modes, you may come across this assert.

Exact steps for others to reproduce the error

  1. Open a Blender debug build;
  2. Make sure that the Auto Depth option in the navigation preferences is enabled;
  3. In the viewport, with the default Cube, go to the Weight Paint mode;
  4. Zoom in to the Cube;
  5. Enable the Wireframe view.
    Assert!

The solution may be simple, but it's good to investigate if there are any serious bug hidden there.

**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: AMD Radeon HD 7570M ATI Technologies Inc. 4.5.13399 Core Profile Context 0 **Blender Version** Broken: version: 2.80 (sub 74), build in 2019-06-14 **Short description of error** In Blender's debug build after enabling certain display modes, you may come across this assert. **Exact steps for others to reproduce the error** 1. Open a Blender debug build; 2. Make sure that the `Auto Depth` option in the navigation preferences is enabled; 3. In the viewport, with the default Cube, go to the `Weight Paint` mode; 4. Zoom in to the Cube; 5. Enable the `Wireframe` view. Assert! The solution may be simple, but it's good to investigate if there are any serious bug hidden there.
Author
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Clément Foucault was assigned by Germano Cavalcante 2019-06-14 16:23:16 +02:00

This issue was referenced by 741641f4c3

This issue was referenced by 741641f4c3b8f546d40fd56bb06122a64bc245d3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65805
No description provided.