Fix T65805 Assert "Too many draw engines enabled at the same time"